forked and added axon-core from my own git

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
     <name>framework</name>
     <url>http://omidbiz.com</url>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.compiler.version>1.8</java.compiler.version>
@@ -30,14 +37,11 @@
 
 
     <dependencies>
-
-
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
             <version>1.9</version>
         </dependency>
-
 
         <dependency>
             <groupId>commons-jxpath</groupId>
@@ -75,12 +79,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- this is a Fork of Omidbiz's axon-core only -->
         <dependency>
-            <groupId>org.omidbiz</groupId>
+            <groupId>com.github.theincondensable</groupId>
             <artifactId>axon-core</artifactId>
-            <version>2.0.5</version>
+            <version>0.0.1</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -130,13 +134,6 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-scratchpad</artifactId>
             <version>${poi.version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.3</version>
         </dependency>
 
         <dependency>
